src/styles.css
*{
    box-sizing: border-box;
}

html { 
    height: 100%; 
}

body { 
    background-color: #F5F7FB;
    display: flex;
    flex-direction: column;
    margin: 0;
}

#root{
    display: grid;
    position: relative;
}

#start-view-container{
    height: 100vh;
    width: 100vw;
    display: flex;
}

header{
    display: flex;
    flex-direction: column;
    align-items: center;
    align-self: center;
    margin: 0 auto;
}



#site-header, #site-header-description{
    margin: 0;    
}

#site-header{
    margin-bottom: .25em;
}

#site-header-description{
    margin-bottom: 2em;
}

/* header > button */
.CTA-button{
    padding: 1em 3em;
    border-radius: 1em;
    border: 0px none;
    background-color: #4D5B9E;
    color: #F5F7FB;
}

#start-yellow-blob, #Quest-yellow-blob, #start-blue-blob, #Quest-blue-blob{
    display: none;
}

#Questions-and-controls-container{
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-self: center;
    justify-content: center;
    padding: 30% 5% 30% 5%; 
    width: 100vw;
    max-width: 1000px;
    min-width:325px;
}

main > .CTA-button{
    align-self: center;
}

.trivia-questions{
    display: flex;
    flex-direction: column;
    padding-bottom: 1.25em;
    width: 100%;
}

.question-group{
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    justify-content: center;
    gap: 1.25em;
    width: auto;
}

.question-group fieldset{
    display: flex;
    width: auto;
    border: none;
    border-bottom: 1px solid #DBDEF0;
    padding: 0;
}

.question-group fieldset legend {
   /* padding:0 0 1em 0; */
   margin-bottom: 1em;
}

hr{
    border: .8px solid #DBDEF0;
}

.answer-choices{
    display: flex;
    flex-wrap: wrap;
    gap: .5em;
    margin-bottom: 1.5em;
}

.answer-choice-container, .answer-choice-container > input, .answer-choice-container > label{
    display: inline;
} 

.answer-choice-container input[type="radio"] {
    opacity: 0;
    position: fixed;
    width: 0;
}

.selected{
    background-color: #D6DBF5;
    border: solid 1px #D6DBF5;
}

.not-selected{
    opacity: 50%;
}

.answer-choice-container label{
    display: inline-block;
    border: solid 1px #4D5B9E;
    padding: .33em 1.33em;
    border-radius: 0.667em;
}

.correct-answer-choice {
    background-color: #94D7A2;
    border: solid 1px #94D7A2;
    opacity: 100%;
}

.incorrect-answer-choice{
    background-color: #F8BCBC;
    border: solid 1px #F8BCBC;
    opacity: 50%;
}

.new-game-container{
    display: flex;
    gap: 24px;
    justify-content: center;
}

.new-game-container p{
    font-weight: 700;
}

/* Typoraphy */

.answer-choice-container label{
    font-size: .875rem;
    color: #293264;
    font-weight: 500;
}

.question-group fieldset legend {
    font-weight: 700;
    font-size: 1rem;
    color: #293264;
}

.new-game-container p{
    font-size: 1rem;
}

body{
    font-family: "Karla", sans-serif;
}

header > .CTA-button, main > .CTA-button, .new-game-container > .CTA-button{
    font-family: "Karla", sans-serif;   
    font-size: 1rem;
}

#site-header{
    font-size: 2rem;
}

#site-header-description{
    visibility: visible;
    font-size: 1rem;
    text-align: center;
}

#trivia-error{
    visibility: visible;
    text-align: center;
}


/* mobile phone styles */

@media (width >= 600px), (height >= 844px){
    
    /* body{
        height: 100%; 
    }

    #root{
        height: 100%;

    } */

    #Questions-and-controls-container{
        padding: 15% 15%; 
    }

    .question-group fieldset legend {
        font-weight: 700;
        font-size: 1.25rem;
        color: #293264;
    }

    .question-group fieldset legend {
        /* padding:0 0 1.25em 0; */
        margin-bottom: 1.25em;
     }
    
    .new-game-container p{
        font-size: 1.25rem;
    }

    #start-yellow-blob, #Quest-yellow-blob{
        display: block;
        position: absolute;
        top: 0;
        right: 0;
    }
    
    #start-blue-blob, #Quest-blue-blob{
        display: block;
        position: absolute;
        bottom: 0;
        left: 0;
    }

}
/* 
@media (orientation: landscape){
    #start-yellow-blob, #Quest-yellow-blob, #start-blue-blob, #Quest-blue-blob{
        display: none;
    }

    #Questions-and-controls-container{
        padding: 5% 5%; 
    }
} */

